[gd_scene load_steps=4 format=3 uid="uid://dj8hun3ysb0nl"]

[ext_resource type="Script" path="res://scratch/projectiletest.gd" id="1_gja48"]
[ext_resource type="Texture2D" uid="uid://sr30u1imc127" path="res://assets/table/table.png" id="1_j5xv6"]
[ext_resource type="PackedScene" uid="uid://bkl5p2djoo52i" path="res://components/coin.tscn" id="3_4kvuo"]

[node name="projectiletest" type="Node2D"]
script = ExtResource("1_gja48")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j5xv6")
centered = false

[node name="PlayerCoin2" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 94.0
offset_top = 111.0
offset_right = 128.0
offset_bottom = 155.0

[node name="PlayerCoin" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 141.0
offset_top = 111.0
offset_right = 175.0
offset_bottom = 155.0

[node name="LeftCoin" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 99.0
offset_top = 33.0
offset_right = 133.0
offset_bottom = 77.0

[node name="FarLeftCoin" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 56.0
offset_top = 33.0
offset_right = 90.0
offset_bottom = 77.0

[node name="CenterCoin" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 140.0
offset_top = 34.0
offset_right = 174.0
offset_bottom = 78.0

[node name="RightCoin" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 185.0
offset_top = 34.0
offset_right = 219.0
offset_bottom = 78.0

[node name="FarRightCoin" parent="." instance=ExtResource("3_4kvuo")]
offset_left = 233.0
offset_top = 32.0
offset_right = 267.0
offset_bottom = 76.0

[node name="FireFarLeft" type="Button" parent="."]
offset_left = 12.0
offset_top = 153.0
offset_right = 89.0
offset_bottom = 174.0
text = "Fire Far Left"

[node name="FireLeft" type="Button" parent="."]
offset_left = 24.0
offset_top = 132.0
offset_right = 79.0
offset_bottom = 153.0
text = "Fire Left"

[node name="FireCenter" type="Button" parent="."]
offset_left = 128.0
offset_top = 152.0
offset_right = 195.0
offset_bottom = 173.0
text = "Fire Center"

[node name="FireRight" type="Button" parent="."]
offset_left = 240.0
offset_top = 136.0
offset_right = 299.0
offset_bottom = 157.0
text = "Fire Right"

[node name="FireFarRight" type="Button" parent="."]
offset_left = 230.0
offset_top = 158.0
offset_right = 311.0
offset_bottom = 179.0
text = "Fire Far Right"

[node name="TrajectoryOptions" type="OptionButton" parent="."]
offset_left = 217.0
offset_top = 105.0
offset_right = 314.0
offset_bottom = 126.0
item_count = 5
selected = 0
popup/item_0/text = "STRAIGHT"
popup/item_0/id = 0
popup/item_1/text = "CURVED"
popup/item_1/id = 1
popup/item_2/text = "PARABOLIC"
popup/item_2/id = 2
popup/item_3/text = "WOBBLE"
popup/item_3/id = 3
popup/item_4/text = "DELAY HOP"
popup/item_4/id = 4

[connection signal="pressed" from="FireFarLeft" to="." method="_on_fire_far_left_pressed"]
[connection signal="pressed" from="FireLeft" to="." method="_on_fire_left_pressed"]
[connection signal="pressed" from="FireCenter" to="." method="_on_fire_center_pressed"]
[connection signal="pressed" from="FireRight" to="." method="_on_fire_right_pressed"]
[connection signal="pressed" from="FireFarRight" to="." method="_on_fire_far_right_pressed"]
[connection signal="item_selected" from="TrajectoryOptions" to="." method="_on_trajectory_options_item_selected"]
